# ros_demo

./: README.md
client/: CMakeLists.txt  package.xml
client/include/client/: client.cc  client.h
client/proto/: agreement.proto
client/src/: client_node.cc  yuquan_listener.cpp  yuquan_talker.cpp
human_robot_hector/: CMakeLists.txt  package.xml  urdf.rviz
human_robot_hector/config/: joint_names_20240116-000-biped.SLDASM.yaml
human_robot_hector/launch/: display.launch  gazebo.launch
human_robot_hector/meshes/: L_calf_Link.STL  L_hip2_Link.STL  L_hip_Link.STL  L_thigh_Link.STL  L_toe_Link.STL  R_calf_Link.STL  R_hip2_Link.STL  R_hip_Link.STL  R_thigh_Link.STL  R_toe_Link.STL  base_link.STL
human_robot_hector/urdf/: 20240116-000-biped.SLDASM.csv  human_hector.urdf
human_robot_urdf/: CMakeLists.txt  package.xml
human_robot_urdf/config/: joint_names_装配体.SLDASM.yaml
human_robot_urdf/launch/: display.launch  gazebo.launch
human_robot_urdf/meshes/: L_ankle.STL  L_base_link.STL  L_foot.STL  L_thigh.STL  L_toe.STL  R_ankle.STL  R_base_link.STL  R_foot.STL  R_thigh.STL  R_toe.STL  trunk.STL
human_robot_urdf/urdf/: test_robot.urdf  装配体.SLDASM.csv
log_test/: CMakeLists.txt  map_manage.conf  package.xml  setting.conf
log_test/launch/: log_launch.launch
log_test/src/: log_test.cpp  log_test2.cpp
pinocchio_ros_example/: CMakeLists.txt  README.md  package.xml
pinocchio_ros_example/src/: example.cpp  hetor_pinocchio_test.cpp
ros-protobuf-bridge/: CMakeLists.txt  package.xml
server/: CMakeLists.txt  package.xml
server/include/server/: server.cc  server.h
server/src/: server_node.cc
